Added generic distribution
